Code cleanup and docs.